--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,92 +1,41 @@
-site_name: EOEPCA Document Template
-site_url: https://eoepca.readthedocs.io/projects/template/
-repo_url: https://github.com/EOEPCA/document-template/
+site_name: EOEPCA Operations Building Block
+site_url: https://eoepca.readthedocs.io/projects/operations/
+repo_url: https://github.com/EOEPCA/operations/
 edit_uri: "edit/main/docs/"
 
 nav:
   - EOEPCA Documentation: https://eoepca.readthedocs.io/
-  - Building-block Name:
+  - Operations:
     - index.md
-    - Getting Started:
-      - getting-started/quick-start.md
-      - getting-started/more-getting-started.md
-    - Design:
-      - design/overview.md
-      - design/more-design.md
-    - Usage:
-      - usage/tutorials.md
-      - usage/howtos.md
-    - Administration:
-      - admin/configuration.md
-      - admin/maintenance.md
-    - API:
-      - api/endpoint-specification.md
-      - api/usage.md
-
-# Footer links
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: "https://github.com/EOEPCA"
-      name: EOEPCA
+  - Getting Started:
+      - getting-started/operator-view.ipynb
 
 theme:
-  # name: mkdocs
-  # name: readthedocs
-  name: material # https://squidfunk.github.io/mkdocs-material/creating-your-site/
-  navigation_depth: 4
-
-  # For `material` theme...
+  name: material
   logo: img/favicon.ico
   favicon: img/favicon.ico
   features:
-    # Navigation
     - navigation.footer
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
     - navigation.sections
-    # - navigation.expand
-    # - toc.integrate
     - navigation.top
-    # Content
     - content.code.copy
     - content.action.edit
-    # Search
     - search.highlight
     - search.share
     - search.suggest
-  palette:
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      toggle:
-        icon: material/weather-sunny
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      toggle:
-        icon: material/weather-night
-        name: Switch to system preference
 
 extra_css:
   - css/eoepca.css
 
 plugins:
-  - autorefs
   - search
-  # - pub-debugger:
-  #     console_log:
-  #       enabled: true
-  #       log_level: INFO
-  #     file_log:
-  #       enabled: false
-  #     zip_log:
-  #       enabled: false
+  - autorefs
+  - mkdocs-jupyter:
+      execute: false
 
 markdown_extensions:
   - tables
@@ -96,19 +45,19 @@ markdown_extensions:
   - smarty
   - sane_lists
   - admonition
+  - abbr
+  - attr_list
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
-  - abbr
-  - attr_list
-  - md_in_html
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.snippets:
       auto_append:
         - includes/abbreviations.md
